data/derived/sp14/progs/unify/prog4156.ml.out
Characters 78-85:
  let f a x = (a^sep) x in
              ^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
